# libiotclient

./: CMakeLists.txt  README.md
inc/: iotclient.h
src/: iotclient.c
